--- a/docs/advanced_features/function_calling.ipynb
+++ b/docs/advanced_features/function_calling.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tool and Function Calling\n",
     "\n",
-    "This guide demonstrates how to use SGLang’s [Function calling](https://platform.openai.com/docs/guides/function-calling) functionality."
+    "This guide demonstrates how to use SGLang\u2019s [Function calling](https://platform.openai.com/docs/guides/function-calling) functionality."
    ]
   },
   {
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -660,7 +662,7 @@
     " get_current_weather(city=\"New York\", state=\"NY\", unit=\"fahrenheit\")]\n",
     "```\n",
     "\n",
-    "For more information, refer to Meta’s documentation on  [Zero shot function calling](https://github.com/meta-llama/llama-models/blob/main/models/llama4/prompt_format.md#zero-shot-function-calling---system-message).\n",
+    "For more information, refer to Meta\u2019s documentation on  [Zero shot function calling](https://github.com/meta-llama/llama-models/blob/main/models/llama4/prompt_format.md#zero-shot-function-calling---system-message).\n",
     "\n",
     "Note that this feature is still under development on Blackwell.\n",
     "\n",
@@ -807,17 +809,17 @@
    "metadata": {},
    "source": [
     "## How to support a new model?\n",
-    "1. Update the TOOLS_TAG_LIST in sglang/srt/function_call_parser.py with the model’s tool tags. Currently supported tags include:\n",
+    "1. Update the TOOLS_TAG_LIST in sglang/srt/function_call_parser.py with the model\u2019s tool tags. Currently supported tags include:\n",
     "```\n",
     "\tTOOLS_TAG_LIST = [\n",
-    "\t    “<|plugin|>“,\n",
-    "\t    “<function=“,\n",
-    "\t    “<tool_call>“,\n",
-    "\t    “<|python_tag|>“,\n",
-    "\t    “[TOOL_CALLS]”\n",
+    "\t    \u201c<|plugin|>\u201c,\n",
+    "\t    \u201c<function=\u201c,\n",
+    "\t    \u201c<tool_call>\u201c,\n",
+    "\t    \u201c<|python_tag|>\u201c,\n",
+    "\t    \u201c[TOOL_CALLS]\u201d\n",
     "\t]\n",
     "```\n",
-    "2. Create a new detector class in sglang/srt/function_call_parser.py that inherits from BaseFormatDetector. The detector should handle the model’s specific function call format. For example:\n",
+    "2. Create a new detector class in sglang/srt/function_call_parser.py that inherits from BaseFormatDetector. The detector should handle the model\u2019s specific function call format. For example:\n",
     "```\n",
     "    class NewModelDetector(BaseFormatDetector):\n",
     "```\n",
