Add log level to all docs

--- a/docs/advanced_features/tool_parser.ipynb
+++ b/docs/advanced_features/tool_parser.ipynb
@@ -546,7 +546,7 @@
     "\n",
     "# Start a new server session for tool choice examples\n",
     "server_process_tool_choice, port_tool_choice = launch_server_cmd(\n",
-    "    \"python3 -m sglang.launch_server --model-path Qwen/Qwen2.5-7B-Instruct --tool-call-parser qwen25 --host 0.0.0.0\"\n",
+    "    \"python3 -m sglang.launch_server --model-path Qwen/Qwen2.5-7B-Instruct --tool-call-parser qwen25 --host 0.0.0.0  --log-level warning\"\n",
     ")\n",
     "wait_for_server(f\"http://localhost:{port_tool_choice}\")\n",
     "\n",
@@ -691,7 +691,7 @@
     "import openai\n",
     "\n",
     "server_process, port = launch_server_cmd(\n",
-    "    \" python3 -m sglang.launch_server --model-path meta-llama/Llama-3.2-1B-Instruct --tool-call-parser pythonic --tp 1\"  # llama-3.2-1b-instruct\n",
+    "    \" python3 -m sglang.launch_server --model-path meta-llama/Llama-3.2-1B-Instruct --tool-call-parser pythonic --tp 1  --log-level warning\"  # llama-3.2-1b-instruct\n",
     ")\n",
     "wait_for_server(f\"http://localhost:{port}\")\n",
     "\n",
