--- a/docs/advanced_features/tool_parser.ipynb
+++ b/docs/advanced_features/tool_parser.ipynb
@@ -423,7 +423,9 @@
     "print_highlight(function_call_response_json[\"normal_text\"])\n",
     "print_highlight(\"==== Calls ====\")\n",
     "print_highlight(\"function name: \", function_call_response_json[\"calls\"][0][\"name\"])\n",
-    "print_highlight(\"function arguments: \", function_call_response_json[\"calls\"][0][\"parameters\"])"
+    "print_highlight(\n",
+    "    \"function arguments: \", function_call_response_json[\"calls\"][0][\"parameters\"]\n",
+    ")"
    ]
   },
   {
@@ -835,11 +837,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "sglang",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -849,8 +846,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
