add log level to other docs

--- a/docs/advanced_features/tool_parser.ipynb
+++ b/docs/advanced_features/tool_parser.ipynb
@@ -420,12 +420,10 @@
     "function_call_response_json = function_call_response.json()\n",
     "\n",
     "print_highlight(\"==== Text ====\")\n",
-    "print_highlight(function_call_response_json[\"normal_text\"])\n",
+    "print(function_call_response_json[\"normal_text\"])\n",
     "print_highlight(\"==== Calls ====\")\n",
-    "print_highlight(\"function name: \", function_call_response_json[\"calls\"][0][\"name\"])\n",
-    "print_highlight(\n",
-    "    \"function arguments: \", function_call_response_json[\"calls\"][0][\"parameters\"]\n",
-    ")"
+    "print(\"function name: \", function_call_response_json[\"calls\"][0][\"name\"])\n",
+    "print(\"function arguments: \", function_call_response_json[\"calls\"][0][\"parameters\"])"
    ]
   },
   {
@@ -497,7 +495,7 @@
     "normal_text, calls = parser.parse_non_stream(generated_text)\n",
     "\n",
     "print_highlight(\"=== Parsing Result ===\")\n",
-    "print_highlight(\"Normal text portion:\", normal_text)\n",
+    "print(\"Normal text portion:\", normal_text)\n",
     "print_highlight(\"Function call portion:\")\n",
     "for call in calls:\n",
     "    # call: ToolCallItem\n",
@@ -599,8 +597,8 @@
     ")\n",
     "\n",
     "print_highlight(\"Response with tool_choice='required':\")\n",
-    "print_highlight(\"Content:\", response_required.choices[0].message.content)\n",
-    "print_highlight(\"Tool calls:\", response_required.choices[0].message.tool_calls)"
+    "print(\"Content:\", response_required.choices[0].message.content)\n",
+    "print(\"Tool calls:\", response_required.choices[0].message.tool_calls)"
    ]
   },
   {
@@ -634,8 +632,8 @@
     ")\n",
     "\n",
     "print_highlight(\"Response with specific function choice:\")\n",
-    "print_highlight(\"Content:\", response_specific.choices[0].message.content)\n",
-    "print_highlight(\"Tool calls:\", response_specific.choices[0].message.tool_calls)\n",
+    "print(\"Content:\", response_specific.choices[0].message.content)\n",
+    "print(\"Tool calls:\", response_specific.choices[0].message.tool_calls)\n",
     "\n",
     "if response_specific.choices[0].message.tool_calls:\n",
     "    tool_call = response_specific.choices[0].message.tool_calls[0]\n",
